# self-issue-bench

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
challenge_tests/javascript/: test_c10_debounce.js  test_c12_flatten_array.js  test_c16_html_entity_decoder.js  test_c35_throttle.js  test_c36_flatten_object.js  test_c37_topological_sort.js  test_c38_priority_queue.js  test_c39_observable.js  test_c40_parse_query_string.js  test_c41_json_stream.js  test_c42_mustache.js  test_c43_escape_regexp.js  test_c44_validate_email.js  test_c4_array_dedup.js  test_c5_deep_clone.js  test_c8_token_counter.js
challenge_tests/python/: test_c11_lru_cache.py  test_c13_date_formatter.py  test_c15_rate_limiter.py  test_c1_fibonacci.py  test_c21_task_scheduler.py  test_c23_merge_intervals.py  test_c24_topological_sort.py  test_c25_edit_distance.py  test_c26_trie.py  test_c27_min_heap.py  test_c28_linked_list.py  test_c29_parse_cron.py  test_c2_palindrome.py  (+9 more)
challenges/: example_challenge.md  fix_prompt.md  independent_review_prompt.md  review_prompt.md
docs/: benchmark.md  heatmap.html  report.md  roadmap.md  validation.md  writeup.md
runner/: aggregate.py  compare.py  constants.py  populate_scores.py  pricing.py  providers.py  report.py  review.py  run_benchmark.py  score.py  stats.py  template.yaml  test_code.py  validate_mutants.py  validate_reviewers.py  validate_tests.py  visualize.py
tests/: conftest.py  test_aggregate.py  test_constants.py  test_report.py  test_review.py  test_score.py  test_test_code.py  test_visualize.py
(+10 files in other folders)
